[package]
name = "yopta-postgres-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
rustyline = "9.1.2"
postgres = "0.19.2"
postgres-types = "0.2.2"